[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demcoreg"
version = "1.1.2"
description = "Utilities for DEM co-registration"
authors = [
    {name = "David Shean", email = "dshean@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy",
    "gdal",
    "pygeotools",
    "wget",
]

[project.urls]
Homepage = "https://github.com/dshean/demcoreg"

[project.scripts]
pc_align_wrapper.sh = "demcoreg.pc_align_wrapper:main"
apply_dem_translation.py = "demcoreg.apply_dem_translation:main"
compute_diff.py = "demcoreg.compute_diff:main"
dem_align.py = "demcoreg.dem_align:main"
dem_mask.py = "demcoreg.dem_mask:main"
dem_coreg.sh = "demcoreg.dem_coreg:main"
dem_coreg_all.sh = "demcoreg.dem_coreg_all:main"
vol_stats.py = "demcoreg.vol_stats:main"
robust_stats.py = "demcoreg.robust_stats:main"
glas_proc.py = "demcoreg.glas_proc:main"
filter_glas.py = "demcoreg.filter_glas:main"

[tool.setuptools]
packages = ["demcoreg"]

[tool.setuptools.package-data]
demcoreg = ["*.sh"]
